# ai-powered-client-email-assistant

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: billing.py  drafts.py  main.py
backend/app/auth/: models.py  oauth.py  pages.py  routes.py  security.py  service.py
backend/app/billing/: __init__.py
backend/app/client_messages/: __init__.py  routes.py
backend/app/core/: config.py  database.py
extension/: background.js  content.css  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/layout/: AppShell.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
web/src/features/account/: AccountPage.tsx
web/src/features/auth/: AuthPage.tsx
web/src/features/pricing/: PricingPage.tsx
web/src/lib/: api.ts  storage.ts
web/src/routes/: AppRoutes.tsx
web/src/store/: dashboardStore.ts
