[project]
name = "client-message-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for the Client Message Assistant Chrome extension."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bcrypt==5.0.0",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "python-dotenv==1.2.2",
  "sqlalchemy==2.0.45",
  "uvicorn[standard]==0.34.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
